<resources>
    <string name="app_name">PintuApp</string>
    <string name="home">Home</string>
    <string name="menu">Menu</string>
    <string name="open">Open</string>
    <string name="close">Close</string>
    <string name="notification">Notification</string>
    <string name="help">Help</string>
    <string name="order">Order</string>
    <string name="favourites">Favourites</string>
    <string name="account">Account</string>
    <string name="text_subrayado"><u>Forgotten password?</u></string>
    <string name="new_cliente">You are new? Register</string>
    <string name="create_account">Create a new account</string>
    <string name="sign_in">Sign in</string>
    <string name="signin_login">Sign in or login</string>
    <string name="Sign_in_with_google">Sign in with Google</string>
    <string name="or">OR</string>
    <string name="password">Password</string>
    <string name="name">Name</string>
    <string name="surname">Surname</string>
    <string name="repeat_password">Repeat password</string>
    <string name="privacity_politics">I already read the <u>privacity politics</u></string>
    <string name="okay">OKAY</string>
    <string name="errorCreatingUser">Error creating the new user"</string>
    <string name="accept_error">Please check the privacity politics </string>
    <string name="completeAllTheFields">Complete all the fields</string>
    <string name="title_activity_login" translatable="false">LoginActivity</string>
    <string name="first_fragment_label" translatable="false">First Fragment</string>
    <string name="second_fragment_label" translatable="false">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>
    <string name="error">Error, try again</string>
    <string name="errorLogin">Error with your login</string>
    <string name="done">Done</string>
    <string name="prefs_file" translatable="false">com.example.pintuapp.PREFERENCE_FILE_KEY</string>
    <string name="email_is_already_register">The email is already registered</string>
    <string name="elimanated_account">Delete you account</string>
    <string name="account_settings">Account Settings</string>
    <string name="phone_number">Phone number</string>
    <string name="creditCard_number">Credit card number</string>
    <string name="save_change">Save change</string>
    <string name="administrator_mode">" Administrator mode"</string>
    <string name="check_password">Check the password, are not the same</string>
    <string name="creating_user">Creating user, wait a moment...</string>
    <string name="biometric_auth">Biometric authentication</string>
    <string name="different_account">Cancel</string>
    <string name="insert_url">Insert url</string>
    <string name="change_img">Change image</string>
    <string name="press_again">Press again to exit</string>
    <string name="forgot_password">Forgot you password?</string>
    <string name="put_email">Put your email here</string>
    <string name="reset_password">Reset</string>
    <string name="email_sent">Email sent</string>
    <string name="email_no_exists">This email doesn`t registered</string>
    <string name="offers">Offers</string>
    <string name="search">Search any product</string>
    <string name="category">Category</string>
    <string name="productHighLights">Products highlight</string>
    <string name="default_notification_channel_id" translatable="false">fcm_default_channel</string>
    <string name="complete">Changed saved</string>
    <string name="are_you_sure">Are you sure?</string>
    <string name="cancel">Cancel</string>
    <string name="deleteAccount">Do you want to delete your account?</string>
    <string name="products">Products</string>
    <string name="add_to_cart">Add to basket</string>
    <string name="buy_now">Buy now</string>
    <string name="quantity">Quantity:</string>
    <string name="description">Description:</string>
    <string name="cart">Cart</string>
    <string name="order_summary">Order summary</string>
    <string name="subtotal">Subtotal:</string>
    <string name="shipping">Shipping:</string>
    <string name="total">Total:</string>
    <string name="price">Price:</string>
    <string name="need_login">You need to login</string>
    <string name="order_successful">Order successful</string>
    <string name="waiting">Waiting to approve</string>
    <string name="problem">Your canceled your payment</string>
    <string name="Account">Account</string>
    <string name="politics">Politics and privacity</string>
    <string name="settings">Settings</string>
    <string name="adaptability">Adaptability</string>
    <string name="who_Are_we">About us</string>
    <string name="we_are_info">PintuApp is guided by four principles: customer obsession rather than competitor focus, passion for invention, commitment to operational excellence, and long-term thinking. PintuApp strives to be Earth’s most customer-centric company, Earth’s best employer, and Earth’s safest place to work. Customer reviews, 1-Click shopping, personalized recommendations, Prime, Fulfillment by Pintuapp, Career Choice, Fire tablets, Fire TV, Amazon Echo, Alexa, Just Walk Out technology, PintuApp Studios, and The Climate Pledge are some of the things pioneered by PintuApp.</string>
    <string name="shipping_info">Our shipping is not free, it\'s only 2€ the shipping is something that we need, it\'s not too much and in the future this will be free for all users in our platform</string>
    <string name="our_products">Our products</string>
    <string name="our_products_info">Our products are natural, we are working with the environment and we provide you our best quality</string>
    <string name="disable_notifications">Disable notifications</string>
    <string name="add_product">Add product</string>
    <string name="add_product_to_db">Add product to DB</string>
    <string name="background_color">Background color</string>
    <string name="image_url">Image URL</string>
    <string name="product_name">Product name</string>
    <string name="promotion">Promotion</string>
    <string name="add">Add</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="offer_name">Offer name</string>
    <string name="category_name">Category name</string>
    <string name="notification_title">Notification title</string>
    <string name="add_offer">Add offer</string>
    <string name="add_notification">Add notification</string>
    <string name="add_category">Add category</string>
    <string name="check_orders">Check orders</string>
    <string name="street_direction">Street direction</string>
    <string name="add_information">Please, add an address and a phone number</string>
    <string name="state">State:</string>
    <string name="accept">Accept</string>
    <string name="decline">Decline</string>
    <string name="details">Details</string>
    <string name="out_stock">Out of stock</string>
    <string name="text_out_stock">This product is out of stock</string>
    <string name="modify">Modify</string>
    <string name="delete">Delete</string>
    <string name="edit">Edit</string>
</resources>